--- a/src/shared/styles/main.scss
+++ b/src/shared/styles/main.scss
@@ -5,7 +5,7 @@ html {
 body {
   margin: 0;
   font-family: 'Segoe UI', sans-serif;
-  background-color: #f5f5f5;
+  background-color: $color-background;
 }
 
 #app {
@@ -18,15 +18,13 @@ body {
 
 .container {
   display: flex;
-  border: 1px solid #ccc;
+  border: 1px solid $color-active;
   border-radius: 10px;
-  background: #fff;
+  background: $color-white;
   min-height: 600px;
   overflow: hidden;
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
+  box-shadow: 0 4px 12px $color-shadow;
   width: 100%;
-  max-width: 100%;
-  min-width: 100%;
 }
 
 .content {
